Revision history for Module-Format

0.0.5   2013-05-21
        - Add t/style-trailing-space.t to check for trailing space.
        - Get rid of trailing whitespace.
        - Convert this file to t/cpan-changes.t .

0.0.4   2011-06-11
        - Small improvement to the script/perlmf POD.

0.0.3   2010-12-01
        - Correct a bug with the regex of guessing a
        MooseX/Role/BuildInstanceOf.pm -like unix path.
0.0.2   2010-11-28
        - Add keywords and resources to the Build.PL/META.yml.
        - Removed the depenedency on List::MoreUtils.

0.0.1   2010-11-27
        First version, released on an unsuspecting world.